--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 body {
-     background-color: aliceblue;
+     background-color: rgb(216, 4, 4);
+     font-family: Bai Jajuree;
 }
 footer {
-    background-color: black;
-    color: aliceblue;
+    background-color: rgb(255, 155, 5);
+    color: rgb(229, 255, 0);
     position: fixed;
     bottom: 0%;
     width: 100%;
+    height: 2rem;
 }
-footer{
+footer p {
     text-align: center;
     font-size: 0.6rem;
+    margin-top: 0.5rem;
 }
