--- a/style.css
+++ b/style.css
@@ -15,3 +15,13 @@ footer p {
     font-size: 0.6rem;
     margin-top: 0.5rem;
 }
+#container {
+    display: flex;
+}
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
